5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1577_996.log
== SUBMITION (2019-03-14 19:09:01) 
-- CODE:
print("*****")
print(" ")
print(" ")
print(" ")
print(" ")
-- EXECUTION TIME:
0.188404
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:11:07) 
-- CODE:
print("*****")
print("(* o o *) ")
print(" ")
print(" ")
print(" ")
-- OUTPUT:
*****
(* o o *)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:12:30) 
-- CODE:
print("*****")
print("(* o o *) ")
print("* ^ *")
print(" ")
print(" ")
-- OUTPUT:
*****
(* o o *) 
* ^ *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:12:35) 
-- CODE:
print("*****")
print("(* o o *) ")
print("* ^ *")
print(" ")
print(" ")
-- OUTPUT:
*****
(* o o *) 
* ^ *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:12:42) 
-- CODE:
print("*****")
print("(* o o *) ")
print("* ^ *")
print(" ")
print(" ")
-- OUTPUT:
*****
(* o o *) 
* ^ *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:12:47) 
-- CODE:
print("*****")
print("(* o o *) ")
print("* ^ *")
print(" ")
print(" ")
-- OUTPUT:
*****
(* o o *) 
* ^ *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:13:07) 
-- CODE:
print(" ***** ")
print("(* o o *) ")
print("* ^ *")
print(" ")
print(" ")
-- OUTPUT:
***** 
(* o o *) 
* ^ *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:13:26) 
-- CODE:
print(*****)
print("(* o o *) ")
print("* ^ *")
print(" ")
print(" ")
-- ERROR:
File "XXXX", line 1
    print(*****)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:13:31) 
-- CODE:
print(*****)
print("(* o o *) ")
print("* ^ *")
print(" ")
print(" ")
-- EXECUTION TIME:
0.142168
-- ERROR:
  File "/home/codebench/codes/1577/996/main.py", line 1
    print(*****)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:13:57) 
-- CODE:
print(*****)
print("(* o o *) ")
print("* ^ *")
print(" ")
print(" ")
-- ERROR:
File "XXXX", line 1
    print(*****)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:14:39) 
-- CODE:
print("*****")
print("(* o o *) ")
print("* ^ *")
print(" ")
print(" ")
-- OUTPUT:
*****
(* o o *) 
* ^ *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:14:43) 
-- CODE:
print("*****")
print("(* o o *) ")
print("* ^ *")
print(" ")
print(" ")
-- EXECUTION TIME:
0.175103
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *) 
* ^ *
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:15:42) 
-- CODE:
print("*****")
print("(* o o *) ")
print("* ^ *")
print("* --- *")
print("***** ")
-- EXECUTION TIME:
0.134746
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *) 
* ^ *
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
